--- a/src/responsive.scss
+++ b/src/responsive.scss
@@ -140,5 +140,9 @@
     .car-banner {
         padding-top: 30px;
     }
+    .login-wrapper .wrapper{
+        flex: 0 0 320px !important;
+        max-width: 320px !important;
+    }
 
 }
