--- a/src/Login.scss
+++ b/src/Login.scss
@@ -3,12 +3,28 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    background: url(./img/login-bg.jpg) no-repeat center center;
+    background-size: cover;
+    position: relative;
+
+    &::before {
+        content: "";
+        position: absolute;
+        left: 0;
+        opacity: 0.3;
+        top: 0;
+        width: 100%;
+        background: linear-gradient(180deg, rgba(4, 5, 6, 0.60) 0%, rgba(4, 5, 6, 0.80) 57.81%, #040506 91.67%), lightgray 50% / cover no-repeat;
+        height: 100%;
+    }
 
     .wrapper {
-        background: #18191A;
+        // background: #18191A;
         padding: 30px;
         max-width: 520px;
         flex: 0 0 520px;
+        position: relative;
+        z-index: 5;
         text-align: center;
     }
 
@@ -49,18 +65,92 @@
         line-height: 45px;
         color: #fff;
         transition: all ease 0.4s;
-        &:hover{
+
+        &:hover {
             background: #8E8E93;
             color: #fff;
         }
     }
-    .or{
+
+    .or {
         color: #8E8E93;
-        padding: 15px 0px;
+        margin: 15px 0px;
+        position: relative;
+
+        &::after {
+            content: "";
+            position: absolute;
+            background: #3C3C43;
+            height: 1px;
+            width: 42%;
+            right: 0;
+            top: 12px;
+        }
+
+        &::before {
+            content: "";
+            position: absolute;
+            background: #3C3C43;
+            height: 1px;
+            width: 42%;
+            left: 0;
+            top: 12px;
+        }
     }
-    .signup-text{
+
+    .signup-options {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 20px;
+        margin-top: 20px;
+
+        li {
+            background: #1F2022;
+            width: 44px;
+            height: 44px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0px 5px;
+            border-radius: 50%;
+            cursor: pointer;
+            transition: all ease 0.3s;
+
+            svg {
+                fill: #8E8E93;
+            }
+
+            &:hover {
+                background: #387AFF;
+                transform: translateY(-5px);
+
+                svg {
+                    fill: #fff;
+                }
+            }
+        }
+    }
+
+    .terms-text {
         text-align: center;
-        a{
+        color: #8E8E93;
+        text-align: center;
+        font-family: Inter;
+        font-size: 10px;
+        margin-top: 10px;
+
+        a {
+            color: #387AFF;
+            font-weight: 700;
+        }
+    }
+
+    .signup-text {
+        text-align: center;
+        color: #929292;
+
+        a {
             color: #387AFF;
             font-weight: 700;
         }
