--- a/src/CarProfile/CarPorfileInfo.scss
+++ b/src/CarProfile/CarPorfileInfo.scss
@@ -1,11 +1,24 @@
 .car-banner {
     .stars {
         display: flex;
+        font-size: 20px;
 
         i {
             color: #387AFF;
             padding-right: 5px;
         }
+    }
+
+    p span {
+        color: #387AFF;
+        cursor: pointer;
+    }
+
+    .rating-wrapper-btns {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-top: 30px;
     }
 
     h1 {
@@ -90,7 +103,7 @@
 }
 
 .extra-info {
-    margin: 60px 0px;
+    margin: 30px 0px;
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     gap: 15px;
@@ -105,16 +118,65 @@
             font-weight: 600;
             font-size: 32px;
             margin: 0px;
+            display: flex;
+            justify-content: center;
+            align-items: baseline;
+            max-width: 100px;
+            margin: 0 auto;
+            gap: 8px;
+
+            span {
+                font-size: 15px;
+                line-height: 20px;
+                text-align: left;
+            }
         }
-        p{
+
+        p {
             color: #8E8E93;
             display: flex;
             margin-top: 5px;
             justify-content: center;
-            img{
+            align-items: center;
+
+            svg {
                 margin-right: 10px;
             }
         }
     }
 }
 
+.two-clm-posts {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+
+    .img-holder {
+        cursor: pointer;
+    }
+}
+
+.show-more-p {
+    margin-top: 30px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    color: #387AFF;
+    margin-bottom: 30px;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 25px;
+    cursor: pointer;
+    transition: all ease 0.3s;
+
+    &:hover {
+        color: #fff;
+
+        svg {
+            transition: all ease 0.3s;
+            transform: translateY(3px);
+        }
+    }
+
+}
