--- a/src/CarProfile/Posts.scss
+++ b/src/CarProfile/Posts.scss
@@ -1,20 +1,20 @@
 .posts-row {
     display: grid;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 20px;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 30px;
     margin-bottom: 30px;
 
-    .img-holder:first-child {
-        grid-column: span 2;
-        grid-row: span 2;
-    }
-
     .img-holder {
+        overflow: hidden;
+        transition: all ease 0.3s;
         img {
             width: 100%;
             height: 100%;
             object-fit: cover;
+            transition: all ease 0.3s;
+        }
+        &:hover img{
+            transform: scale(1.1);
         }
     }
 }
@@ -25,10 +25,18 @@
     line-height: 25px;
     color: #387AFF;
     margin-bottom: 60px;
-    display: block;
+    display: flex;
     cursor: pointer;
-    text-align: center;
+    align-items: center;
+    gap: 10px;
+    transition: all ease 0.3s;
+    svg{
+        transition: all ease 0.3s;
+    }
     &:hover{
         color: #fff;
+        svg{
+            transform: translateX(3px);
+        }
     }
 }
