--- a/src/ComponentPage/PartsSlider.scss
+++ b/src/ComponentPage/PartsSlider.scss
@@ -43,6 +43,36 @@
 }
 
 .slider-img {
+    .owl-carousel {
+        .owl-dots {
+            display: none;
+        }
+
+        .owl-nav {
+            position: absolute;
+            z-index: 9;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            padding: 0px 10px;
+
+            .owl-next,
+            .owl-prev {
+                border-radius: 50px;
+                background: rgba(18, 19, 19, 0.4);
+                width: 50px;
+                height: 50px;
+                font-size: 32px;
+                &:hover{
+                    background: #387AFF;
+                }
+            }
+        }
+    }
+
     .main-img {
         width: 100%;
     }
@@ -54,6 +84,39 @@
     }
 }
 
+.install-info {
+    display: flex;
+    gap: 16px;
+    margin-bottom: 10px;
+
+    li {
+        color: #8E8E93;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: 14.4px;
+        letter-spacing: -0.078px;
+        position: relative;
+
+        &:first-child {
+            &::before {
+                display: none;
+            }
+        }
+
+        &::before {
+            content: "";
+            left: -9px;
+            top: 5px;
+            width: 5px;
+            height: 5px;
+            background: #8E8E93;
+            position: absolute;
+            border-radius: 50%;
+        }
+    }
+}
+
 .actions-btns {
     margin: 30px 0px;
     display: flex;
@@ -61,6 +124,10 @@
 
     svg {
         cursor: pointer;
+
+        &:hover {
+            opacity: 0.7;
+        }
     }
 
     span {
@@ -194,7 +261,7 @@ h2 {
     .gallery-list {
         display: grid;
         gap: 30px;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
 
         .how-block {
             .gallery-img {
@@ -214,8 +281,21 @@ h2 {
     font-size: 20px;
     margin-top: 15px;
     cursor: pointer;
+    transition: all ease 0.3s;
 
-    i {
-        padding-left: 8px;
+    svg {
+        margin-left: 8px;
+    }
+
+    svg {
+        transition: all ease 0.3s;
+    }
+
+    &:hover {
+        color: #fff;
+
+        svg {
+            transform: translateY(3px);
+        }
     }
 }
