--- a/src/UserProfile/UserProfile.scss
+++ b/src/UserProfile/UserProfile.scss
@@ -103,6 +103,13 @@
             font-size: 16px;
         }
 
+        p{
+            span{
+                color: #387AFF;
+                cursor: pointer;
+            }
+        }
+
         .followers {
             display: flex;
             margin-top: 20px;
@@ -180,7 +187,6 @@
 
         .garage-block {
             position: relative;
-            border-radius: 15px;
             overflow: hidden;
 
             .stars {
@@ -231,7 +237,6 @@
                 width: 100%;
                 height: 320px;
                 object-fit: cover;
-                border-radius: 15px;
                 transition: all ease 0.4s;
             }
 
@@ -270,7 +275,6 @@
 
     .crews-block {
         position: relative;
-        border-radius: 15px;
         overflow: hidden;
 
         &::after {
@@ -287,7 +291,6 @@
             width: 100%;
             height: 220px;
             object-fit: cover;
-            border-radius: 15px;
             transition: all ease 0.4s;
         }
 
@@ -323,4 +326,8 @@
             }
         }
     }
+}
+
+.user-page-container{
+    grid-template-columns: 20% calc(80% - 40px) !important;
 }
